--- a/login.html
+++ b/login.html
@@ -28,7 +28,8 @@
             <button type="submit" class="login-button">Entrar</button>
         </form>
         <div class="register">
-            <span>Não tem uma conta?</span> <a href="register.html">Criar conta</a>
+            <span>Não tem uma conta?</span> <a href="register.html">Criar conta Doador</a>
+            <span>Não tem uma conta?</span> <a href="registerONG.html">Criar conta ONG</a>
         </div>
     </section>
 </body>
