--- a/quemSomos.html
+++ b/quemSomos.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Novo Começo</title>
     <link rel="stylesheet" href="global.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="quemSomos.css">
 </head>
-
 <body>
-    <header>  
+    <header>
         <nav class="navbar nav-lg-screen" id="navbar">
             <button class="btn-icon-header" onclick="toggleSideBar()">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-list"
@@ -26,15 +25,16 @@
                 <ul>
                     <li>
                         <button class="btn-icon-header" onclick="toggleSideBar()">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+                                class="bi bi-x" viewBox="0 0 16 16">
                                 <path
                                     d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708" />
                             </svg>
                         </button>
                     </li>
-                    <li class="nav-link"><a href="#">HOME</a></li>
+                    <li class="nav-link"><a href="index.html">HOME</a></li>
                     <li class="nav-link"><a href="#">ONG'S</a></li>
-                    <li class="nav-link"><a href="quemSomos.html">SOBRE</a></li>
+                    <li class="nav-link"><a href="#">SOBRE</a></li>
                     <li class="nav-link"><a href="#">CONTATO</a></li>
                     <li class="nav-link btn-login"><a href="">LOGIN</a></li>
                 </ul>
@@ -44,68 +44,54 @@
             </div>
         </nav>
     </header>
-
-    <main tax`bindex="0" class="content" id="content" onclick="closeSideBar()">
-        <section class="banner-intro">
-            <div>
-                <p class="tittle-banner">NOVO</p>
-                <p class="tittle-banner">COMEÇO</p>
-            </div>
-            <div>
-                <img class="img-banner" src="assets/banner.png">
-            </div>
-            <div class="quero-doar">
-                <a class="btn-quero-doar" href="#">QUERO DOAR</a>
+    <main>
+        <section class="boxes">
+            <div class="box">
+                <h2 class="box-title">QUEM SOMOS?</h2>
+                <p>
+                    A Novo Começo é uma ONG intermediária que facilita o processo de doação entre ONGs e doadores, promovendo uma doação
+                    inteligente e eficiente. Com o objetivo de dar início a novos ciclos e ajudar pessoas em situações de vulnerabilidade, a
+                    Novo Começo conecta doadores a diversas causas, garantindo que as doações sejam direcionadas de forma transparente e
+                    impactante. A organização atua como um elo, simplificando o processo de doação e potencializando o alcance das
+                    iniciativas de solidariedade.
+                </p>
             </div>
         </section>
 
-        <section class="banner-cards-ongs">
-            
+        <section class="boxes">
+            <div class="box">
+                <h2 class="box-title">POR QUE DOAR? </h2>
+                <p>
+                    Doar é um ato que vai além da ajuda financeira; é uma forma de transformar vidas e contribuir para um mundo melhor.
+                    Quando você doa, oferece a oportunidade de recomeço para aqueles que mais precisam, ajudando a suprir necessidades
+                    básicas, como alimentação, saúde, e educação. Além disso, a doação promove igualdade social, fortalece comunidades e
+                    inspira outras pessoas a fazerem o mesmo. É também uma forma de exercer empatia, solidariedade e responsabilidade
+                    social, gerando impacto positivo tanto para quem recebe quanto para quem doa. Cada contribuição, por menor que pareça,
+                    tem o poder de mudar destinos e criar um futuro mais justo e solidário.
+                </p>
+            </div>
         </section>
 
-        <section class="banner-cards-clientes">
-            <div class="card-doador">
-                <p>
-                    "Doar é um ato de amor. Cada contribuição, por menor que seja, faz a diferença na vida de alguém. Fico feliz em
-                    poder
-                    ajudar!"
-                </p>
-                <span>
-                    Cesar Yoshio
-                </span>
-            </div>
-            <div class="card-doador">
-                <p>
-                    A doação é uma maneira simples de espalhar esperança. Saber que minha contribuição pode mudar uma vida me motiva a
-                    continuar ajudando!"
-                </p>
-                <span>
-                    Tiago Gorri
-                </span>
-            </div>
-            <div class="card-doador">
-                <p>
-                    "Cada vez que doo, sinto que estou fazendo parte de algo maior. Juntos, podemos transformar realidades e construir um
-                    futuro melhor!"
-                    ajudar!"
-                </p>
-                <span>
-                    Matheus Muller
-                </span>
-            </div>
-        </section>
+
+
+
+
+
+
     </main>
+
+
 
     <footer>
         <div class="footer">
             <div class="img-footer-start">
                 <img class="boneco-footer" class="img-footer" src="assets/img-footer.png">
             </div>
-
+    
             <div class="socias">
                 <div class="icons-col-1">
                     <div class="social-footer">
-                        <img class="icon-footer" src="assets/google.png"> 
+                        <img class="icon-footer" src="assets/google.png">
                         <p>novocomeço@gmail.com</p>
                     </div>
                     <div class="social-footer">
@@ -129,8 +115,6 @@
             </div>
         </div>
     </footer>
-
     <script src="header.js"></script>
-
 </body>
 </html>
