--- a/config.html
+++ b/config.html
@@ -21,8 +21,8 @@
         </div>
 
         <div class="action-buttons">
-            <button class="action-button" onclick="window.location.href='mudar-senha.html'">Mudar senha</button>
-            <button class="action-button" onclick="window.location.href='excluir-conta.html'">Excluir Conta</button>
+            <button class="action-button" onclick="window.location.href='mudar_senha.html'">Mudar senha</button>
+            <button class="action-button" onclick="window.location.href='excluir_conta.html'">Excluir Conta</button>
         </div>
     </div>
 </body>
