--- a/config.html
+++ b/config.html
@@ -14,9 +14,9 @@
                 <p>FOTO</p>
             </div>
             <div class="donation-details">
-                <p>Usuário: </p>
-                <p>Email: </p>
-                <p>CPF//CNPJ: </p>
+                <p>Usuário: Nome do Usuário</p>
+                <p>Email: exemplo@dominio.com</p>
+                <p>CPF/CNPJ: 000.000.000-00</p>
             </div>
         </div>
 
