--- a/html/index.html
+++ b/html/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Novo Começo</title>
-    <link rel="stylesheet" href="global.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="../css/global.css">
+    <link rel="stylesheet" href="../css/index.css">
 </head>
 
 <body>
@@ -20,7 +20,7 @@
                 </svg>
             </button>
             <div>
-                <img class="img-logo" id="logo" src="assets/logo.png" alt="Logo">
+                <img class="img-logo" id="logo" src="../assets/logo.png" alt="Logo">
             </div>
             <div class="nav-links" id="nav-links">
                 <ul>
@@ -32,15 +32,15 @@
                             </svg>
                         </button>
                     </li>
-                    <li class="nav-link"><a href="#">HOME</a></li>
-                    <li class="nav-link"><a href="#">ONG'S</a></li>
-                    <li class="nav-link"><a href="quemSomos.html">SOBRE</a></li>
-                    <li class="nav-link"><a href="#">CONTATO</a></li>
-                    <li class="nav-link btn-login"><a href="">LOGIN</a></li>
+                    <li class="nav-link"><a href="../html/index.html">HOME</a></li>
+                    <li class="nav-link"><a href="../html/queroDoar.html">ONG'S</a></li>
+                    <li class="nav-link"><a href="../html/quemSomos.html">SOBRE</a></li>
+                    <li class="nav-link"><a href="../html/contato.html">CONTATO</a></li>
+                    <li class="nav-link btn-login"><a href="../html/login.html">LOGIN</a></li>
                 </ul>
             </div>
             <div class="user">
-                <img class="img-user" src="assets/user.png" alt="Usuário">
+                <img class="img-user" src="../assets/user.png" alt="Usuário">
             </div>
         </nav>
     </header>
@@ -52,7 +52,7 @@
                 <p class="tittle-banner">COMEÇO</p>
             </div>
             <div>
-                <img class="img-banner" src="assets/banner.png">
+                <img class="img-banner" src="../assets/banner.png">
             </div>
             <div class="quero-doar">
                 <a class="btn-quero-doar" href="#">QUERO DOAR</a>
@@ -99,37 +99,37 @@
     <footer>
         <div class="footer">
             <div class="img-footer-start">
-                <img class="boneco-footer" class="img-footer" src="assets/img-footer.png">
+                <img class="boneco-footer" class="img-footer" src="../assets/img-footer.png">
             </div>
             <div class="socias">
                 <div class="icons-col-1">
                     <div class="social-footer">
-                        <img class="icon-footer" src="assets/google.png"> 
+                        <img class="icon-footer" src="../assets/google.png"> 
                         <p>novocomeço@gmail.com</p>
                     </div>
                     <div class="social-footer">
-                        <img class="icon-footer" src="assets/instagram.png">
+                        <img class="icon-footer" src="../assets/instagram.png">
                         <p>@novocomeço</p>
                     </div>
                 </div>
                 <div class="icons-col-2">
                     <div class="social-footer">
-                        <img class="icon-footer" src="assets/whatsapp.png">
+                        <img class="icon-footer" src="../assets/whatsapp.png">
                         <p>(41)99997676</p>
                     </div>
                     <div class="social-footer">
-                        <img class="icon-footer" src="assets/facebook.png">
+                        <img class="icon-footer" src="../assets/facebook.png">
                         <p>@novocomeco</p>
                     </div>
                 </div>
             </div>
             <div class="img-footer-end">
-                <img class="boneco-footer" class="img-footer" src="assets/img-footer.png">
+                <img class="boneco-footer" class="img-footer" src="../assets/img-footer.png">
             </div>
         </div>
     </footer>
 
-    <script src="header.js"></script>
+    <script src="../js/header.js"></script>
 
 </body>
 </html>
