--- a/html/index.html
+++ b/html/index.html
@@ -55,7 +55,7 @@
                 <img class="img-banner" src="../assets/banner.png">
             </div>
             <div class="quero-doar">
-                <a class="btn-quero-doar" href="#">QUERO DOAR</a>
+                <a class="btn-quero-doar" href="queroDoar.html">QUERO DOAR</a>
             </div>
         </section>
 
