--- a/html/queroDoar.html
+++ b/html/queroDoar.html
@@ -56,8 +56,8 @@
                         <img class="img-card" src="../assets/banner-ongs.png">
                     </div>
                     <div class="btns-card">
-                        <a class="btn-card">DOAR</a>
-                        <a class="btn-card">SAIBA MAIS</a>
+                        <a class="btn-card" href="esc_ong.html">DOAR</a>
+                        <a class="btn-card" href="saibaMais.html">SAIBA MAIS</a>
                     </div>
                 </div>
                 <div class="ong">
@@ -65,8 +65,8 @@
                         <img class="img-card" src="../assets/banner-ongs.png">
                     </div>
                     <div class="btns-card">
-                        <a class="btn-card">DOAR</a>
-                        <a class="btn-card">SAIBA MAIS</a>
+                        <a class="btn-card" href="esc_ong.html">DOAR</a>
+                        <a class="btn-card" href="saibaMais.html">SAIBA MAIS</a>
                     </div>
                 </div>
                 <div class="ong">
@@ -74,8 +74,8 @@
                         <img class="img-card" src="../assets/banner-ongs.png">
                     </div>
                     <div class="btns-card">
-                        <a class="btn-card">DOAR</a>
-                        <a class="btn-card">SAIBA MAIS</a>
+                        <a class="btn-card" href="esc_ong.html">DOAR</a>
+                        <a class="btn-card" href="saibaMais.html">SAIBA MAIS</a>
                     </div>
                 </div>
                 <div class="ong">
@@ -83,8 +83,8 @@
                         <img class="img-card" src="../assets/banner-ongs.png">
                     </div>
                     <div class="btns-card">
-                        <a class="btn-card">DOAR</a>
-                        <a class="btn-card">SAIBA MAIS</a>
+                        <a class="btn-card" href="esc_ong.html">DOAR</a>
+                        <a class="btn-card" href="saibaMais.html">SAIBA MAIS</a>
                     </div>
                 </div>
                 <div class="ong">
@@ -92,8 +92,8 @@
                         <img class="img-card" src="../assets/banner-ongs.png">
                     </div>
                     <div class="btns-card">
-                        <a class="btn-card">DOAR</a>
-                        <a class="btn-card">SAIBA MAIS</a>
+                        <a class="btn-card" href="esc_ong.html">DOAR</a>
+                        <a class="btn-card" href="saibaMais.html">SAIBA MAIS</a>
                     </div>
                 </div>
                 <div class="ong">
@@ -101,8 +101,8 @@
                         <img class="img-card" src="../assets/banner-ongs.png">
                     </div>
                     <div class="btns-card">
-                        <a class="btn-card">DOAR</a>
-                        <a class="btn-card">SAIBA MAIS</a>
+                        <a class="btn-card" href="esc_ong.html">DOAR</a>
+                        <a class="btn-card" href="saibaMais.html">SAIBA MAIS</a>
                     </div>
                 </div>
             </div>
