--- a/html/transfAdmin.html
+++ b/html/transfAdmin.html
@@ -2,11 +2,11 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Novo Começo</title>
     <link rel="stylesheet" href="../css/global.css">
-    <link rel="stylesheet" href="../css/confirmacaoPagamento.css">
+    <link rel="stylesheet" href="../css/confirmar_pagamento.css">
+
 </head>
 <body>
     <header>
@@ -44,28 +44,29 @@
             </div>
         </nav>
     </header>
-
-    <main>   
-        <div class="container">
-            <div class="content">
-                <h1>Confirmação de Pagamento</h1><br>
-                <p>Seu pagamento foi realizado com sucesso!</p><br>
-                <p>Obrigado por ajudar a mudar o mundo!</p>
+    <div class="main-container">
+        <div class="pix-box">
+            <div class="pix-countdown">
+                <div class="pix-image">
+                    <div class="image-box"></div>
+                </div>
             </div>
-            <a href="../html/index.html" class="btn">Voltar para a página inicial</a>
+            <div>
+                <h1>1. Abra o aplicativo do banco</h1><br>
+                <h1>2. Clique em pagar por QR Code</h1><br>
+                <h1>3. Escaneie o QR Code</h1>
+            </div>
         </div>
-    </main>
-
+    </div>
     <footer>
         <div class="footer">
             <div class="img-footer-start">
                 <img class="boneco-footer" class="img-footer" src="../assets/img-footer.png">
             </div>
-    
             <div class="socias">
                 <div class="icons-col-1">
                     <div class="social-footer">
-                        <img class="icon-footer" src="../assets/google.png">
+                        <img class="icon-footer" src="../assets/google.png"> 
                         <p>novocomeço@gmail.com</p>
                     </div>
                     <div class="social-footer">
@@ -89,7 +90,6 @@
             </div>
         </div>
     </footer>
-
     <script src="../js/header.js"></script>
 </body>
 </html>
