--- a/html/config.html
+++ b/html/config.html
@@ -40,7 +40,9 @@
                 </ul>
             </div>
             <div class="user">
-                <img class="img-user" src="../assets/user.png" alt="Usuário">
+                <a href="../html/login.html">
+                    <img class="img-user" src="../assets/user.png" alt="Usuário">
+                </a>
             </div>
         </nav>
     </header>
