--- a/html/index.html
+++ b/html/index.html
@@ -40,58 +40,73 @@
                 </ul>
             </div>
             <div class="user">
-                <img class="img-user" src="../assets/user.png" alt="Usuário">
+                <a href="../html/login.html">
+                    <img class="img-user" src="../assets/user.png" alt="Usuário">
+                </a>
             </div>
         </nav>
     </header>
 
     <main tax`bindex="0" class="content" id="content" onclick="closeSideBar()">
         <section class="banner-intro">
-            <div>
-                <p class="tittle-banner">NOVO</p>
-                <p class="tittle-banner">COMEÇO</p>
+            <div class="text-banner">
+                <div class="first-line-banner">
+                    <div>
+                        <span class="tittle-banner">NOVO</span>
+                    </div>
+                    <div class="a">
+                        <a class="btn-quero-doar" href="queroDoar.html">QUERO DOAR!</a>
+                    </div>
+                </div>
+                <div>
+                    <span class="tittle-banner">COMEÇO</span>
+                </div>
             </div>
             <div>
                 <img class="img-banner" src="../assets/banner.png">
             </div>
             <div class="quero-doar">
-                <a class="btn-quero-doar" href="queroDoar.html">QUERO DOAR</a>
+                <a class="btn-quero-doar-mobile" href="queroDoar.html">QUERO DOAR!</a>
             </div>
         </section>
 
         <section class="banner-cards-ongs">
-            
+            <div class="card-ong">
+                <img class="img-ong" src="../assets/amigosdaterra.png">
+                <a class="btn-conhecer">CONHECER</a>
+            </div>
+            <div class="card-ong">
+                <img class="img-ong" src="../assets/amoranimal.gif">
+                <a class="btn-conhecer">CONHECER</a>
+            </div>
+            <div class="card-ong">
+                <img class="img-ong" src="../assets/maoamiga.png">
+                <a class="btn-conhecer">CONHECER</a>
+            </iv>
         </section>
 
         <section class="banner-cards-clientes">
             <div class="card-doador">
+                <div>
+                    
+                </div>
                 <p>
-                    "Doar é um ato de amor. Cada contribuição, por menor que seja, faz a diferença na vida de alguém. Fico feliz em
-                    poder
-                    ajudar!"
+                    "A solidariedade é um ato poderoso que transforma vidas. Contribuir com amor e compaixão é um pequeno gesto que pode
+                    criar um impacto enorme!"<br>Cesar Yoshio
                 </p>
-                <span>
-                    Cesar Yoshio
-                </span>
             </div>
             <div class="card-doador">
                 <p>
                     A doação é uma maneira simples de espalhar esperança. Saber que minha contribuição pode mudar uma vida me motiva a
-                    continuar ajudando!"
+                    continuar ajudando!"<br>Tiago Gorri
                 </p>
-                <span>
-                    Tiago Gorri
-                </span>
+
             </div>
             <div class="card-doador">
                 <p>
-                    "Cada vez que doo, sinto que estou fazendo parte de algo maior. Juntos, podemos transformar realidades e construir um
-                    futuro melhor!"
-                    ajudar!"
+                    "Ao ajudar o próximo, plantamos sementes de esperança. Cada doação traz um pouco mais de luz e faz a diferença no
+                    caminho de alguém."<br>Matheus Muller
                 </p>
-                <span>
-                    Matheus Muller
-                </span>
             </div>
         </section>
     </main>
